# libmantle

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Mantle.h  README.md
docker/: Dockerfile  dev.sh
docs/: Dockerfile  Doxyfile  build.sh
docs/html/: Mantle_8h.html  Mantle_8h_source.html  annotated.html  classMantle-members.html  classMantle.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_type.html  index.html
docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  search.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  variables_0.js
include/: Mantle.h
src/: Mantle.cc  test.cc
src/policies/: debugenv.lua  howmuch.lua
